k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-service
  namespace: demo-devops
spec:
  type: ClusterIP
  selector:
    app: demo-devops-nodejs
  ports:
    -port: 8000
    targetPort: 8000
