k8s/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: demo-devops-ingress
  namespace: demo-devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: demo-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-devops-nodejs-svc
                port:
                  number: 80
